fe_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-fe
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: counter-fe
  template:
    metadata:
      labels:
        app: counter-fe
    spec:
      containers:
        - name: counter-fe
          image: ghcr.io/ondrejsika/counter-frontend
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
