be_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-be
spec:
  selector:
    app: counter-be
  ports:
    - port: 80
