fe_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-fe
spec:
  selector:
    app: counter-fe
  ports:
    - port: 80
      targetPort: 3000
