fe_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-fe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - counter.lab0.sikademo.com
      secretName: counter.lab0.sikademo.com-tls
    - hosts:
        - counter.k8s.sikademo.com
      secretName: counter.k8s.sikademo.com-tls
    - hosts:
        - counter-manifests.wo1.sikademo.com
      secretName: counter-manifests.wo1.sikademo.com-tls
  rules:
    - host: counter.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-fe
                port:
                  number: 80
    - host: counter.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-fe
                port:
                  number: 80
    - host: counter-manifests.wo1.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-fe
                port:
                  number: 80
